--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="https://ingenial.cl/">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Ingenial – Innovación y Emprendimiento">
+  <meta property="og:title" content="Ingenial – nnovación y Emprendimiento">
   <meta property="og:description" content="Innovación, I+D, transferencia tecnológica y proyectos de alto impacto.">
   <meta property="og:url" content="https://ingenial.cl/">
   <meta property="og:type" content="website">
