--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="https://ingenial.cl/">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Ingenial – nnovación y Emprendimiento">
+  <meta property="og:title" content="Ingenial – Innovación y Emprendimiento">
   <meta property="og:description" content="Innovación, I+D, transferencia tecnológica y proyectos de alto impacto.">
   <meta property="og:url" content="https://ingenial.cl/">
   <meta property="og:type" content="website">
@@ -80,7 +80,7 @@
       </div>
       <div class="text-center text-md-start ms-md-3">
         <span class="pill">Colaboración sinérgica</span>
-        <h1>Innovación y emprendimiento</h1>
+        <h1>nnovación y emprendimiento</h1>
         <p class="subtitle">Experiencia. Compromiso. Valor.</p>
         <div class="cta mt-3">
           <a href="#resultados" class="btn btn-brand">Ver resultados</a>
