--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="text-center text-md-start ms-md-3">
         <span class="pill">Colaboración sinérgica</span>
-        <h1>nnovación y emprendimiento</h1>
+        <h1>Innovación y emprendimiento</h1>
         <p class="subtitle">Experiencia. Compromiso. Valor.</p>
         <div class="cta mt-3">
           <a href="#resultados" class="btn btn-brand">Ver resultados</a>
